--- a/application/styles.css
+++ b/application/styles.css
@@ -35,14 +35,13 @@ body, html {
     text-rendering: optimizeLegibility;
     text-align: center;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .content-wrap{
     max-width: 1500px;
     width:90%;
     margin: 0 auto;
-    padding:30px 0 60px 0;
     height: 100%;
     overflow: hidden;
 }
@@ -112,8 +111,8 @@ h4{
     text-transform: uppercase;
     text-decoration: none;
     background: #60a3bc;
-    padding: 20px;
-    margin:5px;
+    padding: 15px;
+    margin:2px;
     border-radius: 50px;
     display: inline-block;
     border: none;
@@ -151,14 +150,13 @@ input[type=text], select {
     background-color: #F9FCFC;
     padding:12px;
     width: 90%;
-    height: 90%;
+    height: 40px;
     margin: 8px;
     display: block;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-sizing: border-box;
 }
-
 
 /* // Sections */
 section {
@@ -305,7 +303,7 @@ option{
     .btn {
         padding:5%;
     }   
-    .btn#img-upload{
+    .btn[id^=select]{
         width:50%;
     }
 }
