--- a/application/styles.css
+++ b/application/styles.css
@@ -156,6 +156,7 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 10px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 /* // Sections */
